--- a/_posts/2019-06-30-the-us-narrative-today.html
+++ b/_posts/2019-06-30-the-us-narrative-today.html
@@ -2473,107 +2473,107 @@ stories:
   domain: http://www.boiseweekly.com/
   link: https://www.boiseweekly.com/boise/idaho-shakespeare-festivals-the-music-man/Content?oid=18755368
 images:
-- name: stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-statue-face-open-mouth-copper-circuit.png
-- name: old-house-oldhouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-wols.jpg
+- name: old-house-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-light-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crunch-paper.jpg
+- name: locked-up-steam-lock-up-steam-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crunch-paper.jpg
+- name: art-museum-art-museum-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-purple-storm.jpg
+- name: fence-fence-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-cinnamon-rolls.jpg
+- name: wall-cannon-wall-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-dark-dali.jpg
+- name: oldroad-old-road-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-oily-mcoilface.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: old-door-lock-old-door-lock-2-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-emily-carr.jpg
+- name: aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: crow_crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_crabapple.jpg
+- name: old-gas-pumps-oldgaspumps-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-constitution.jpg
+- name: capital-battle-capitolbattle-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-colorful-dream.jpg
+- name: school-clouds-church-clouds-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-mucha-mult.jpg
+- name: oldcabin-oldcabin-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-hot-spicy.jpg
+- name: scream-IMG_1937.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_1937.jpg
+- name: stories-castle-on-hill-edinburgh-feed-people.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-feed-people.JPG
+- name: christianity-christianity-under-construction-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-horiz-circuit.jpg
+- name: old-house-oldhouse-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-aqua.jpg
+- name: subway-subway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
+- name: aws-s3-stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-green-gears-matrix.jpg
+- name: beach-rocks-beach-rocks-currents-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-monet-one.jpg
+- name: legal-statue-legalstatue-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
+- name: school-clouds-church-clouds-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-dry-skin.jpg
+- name: walled-garden-walled-garden-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purp-paper.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-sunday.jpg
+- name: fence-fence-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-aqua.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-diego-rivera1.png
+- name: nyc-flag-nycflag.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag.jpg
+- name: oldroad-old-road-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-dali.jpg
+- name: stories-mosaic-face-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit-3.jpg
+- name: abandonedbuildings_dark_dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dark_dali.jpg
 - name: san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-hot-spicy.jpg
-- name: oldhotel-oldhotel-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-gred-mash.jpg
-- name: store-on-corner-store-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-creativity.jpg
-- name: old-cabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-dark-soul.jpg
-- name: old-church-oldchurch-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-smoking-cigarette.jpg
-- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
-- name: miamibeach-miamibeach-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
-- name: containership-containership-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-post-modern.jpg
-- name: fence-mexico-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-umberto-bocc.jpg
-- name: white-house-lawn-white-house-lawn-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-ww2-dresden.jpg
-- name: oldbarn-oldbarn-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-blue-granite.jpg
-- name: border-crossing-bordercrossing-mucha-mult.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-mucha-mult.png
-- name: gypsy-wagon-gypsywagon-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-sunday.jpg
-- name: razorwire-DSC-0080-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-spagetti-accident.jpg
-- name: crow-crow-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-crafty-painting.jpg
-- name: old-granary-field-granaryfield-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-neo-instinct.jpg
-- name: stories-containership-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-dark-dali.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-dark-soul.jpg
-- name: hollywood-building-hollywood-building-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-cinnamon-rolls.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-copper-circuit.jpg
-- name: legal-statue-legalstatue-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-clean-view.jpg
-- name: powerlines-power-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-wols.jpg
-- name: blossombar-gan-vogh-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-24-99.jpg
-- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
-- name: berlinwall2-berlinwall-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gan-vogh.jpg
-- name: oldhotel-oldhotel-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-clean-view.jpg
-- name: old-house-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-purple-storm.jpg
-- name: wind-mills-windmills-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-colored-circuits.jpg
-- name: gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-marcel-duchamp.jpg
-- name: yosemite-yosemite-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-alien-goggles.jpg
-- name: school-clouds-church-clouds-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-blue-circuit-5.jpg
-- name: curtain-curtain-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-rain.jpg
-- name: docks-docks-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-post-modern.jpg
-- name: dc-statue-dcstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-brush.jpg
-- name: miamibeach-miamibeach-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-rainbow-festival.jpg
-- name: trucksilo-trucksilo-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-purple-storm.jpg
-- name: powerlines-power-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-purp-paper.jpg
-- name: old-granary-field-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-sunday.jpg
-- name: old-house-oldhouse-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gred-mash.jpg
-- name: art-museum-art-museum-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-satan-red.jpg
-- name: meadowbutterfly-meadow-butterfly-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-purp-paper.jpg
-- name: trucksilo-trucksilo-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-constitution.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
-- name: abe-lincoln-one-really-hot-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-really-hot-file-00-00-00-00.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sunday.jpg
-- name: mediterranean-mediterranean-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-creativity.jpg
-- name: containership-bw-storytelling.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-bw-storytelling.png
-- name: border-fence-border-fence-on-hill-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-graham-sutherland.jpg
-- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
+- name: cargo-ship-cargo-ship-on-sea-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-creativity.jpg
+- name: aws-s3-square-C2zqzsfVIAA2hcM.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C2zqzsfVIAA2hcM.jpg
+- name: dragon-desert-desert-dragon-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-clean-view.jpg
+- name: berlinwall2-berlinwall-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-marcel-duchamp.jpg
+- name: old-cabin-oldcabin-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-yellow-paper.jpg
+- name: beach-rocks-beach-rocks-currents-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-horiz-circuit.jpg
+- name: border-fence-border-fence-on-hill-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-purple-storm.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-copper-circuit-2.jpg
+- name: statue-of-liberty-front-view-statueofliberty-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-alberto-giacometti.jpg
+- name: catacombs-catacombs-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-dark-soul.jpg
+- name: udnie-IMG_8312.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_8312.jpg
+- name: nyc-flag-nycflag-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-umberto-bocc.jpg
+- name: oldcabin-oldcabin-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-diego-rivera1.jpg
+- name: gears-4882162452-fa3126b38d-b-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
+- name: rockingchair-face-2-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
+- name: castle-wall-DSC-0067-horiz-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-horiz-circuit.JPG
+- name: wall-cannon-wall-cannon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-blue-circuit.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-aqua.jpg
 ---
 Fried Scheduled To Start For Braves At Mets.&nbsp;Students Experience Farm To School.&nbsp;Elizabeth Banks Wanted Charlie's Angels Stars To Feel 'comfortable'.&nbsp;Life Sentence For Killing At Charlottesville Protest.&nbsp;Man Arrested For Vehicular Homicide.&nbsp;Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;President Trump Tells Kim Jong Un 'I Was Proud To Step Over The Line' Into North Korea.&nbsp;Video Of The Week.&nbsp;
